--- a/2024-08-14/package.json
+++ b/2024-08-14/package.json
@@ -13,6 +13,9 @@
     "prisma": "^5.17.0"
   },
   "dependencies": {
-    "@prisma/client": "^5.18.0"
+    "-": "^0.0.1",
+    "@faker-js/faker": "^8.4.1",
+    "@prisma/client": "^5.18.0",
+    "d": "^1.0.2"
   }
 }
